Added the lastDayUpdate property to the Chapter class; Date property of Comment class renamed to lastDateUpdate; Deleted the callback for the Doctrine event in Comment class; Added lifecycle listener to set the lastDayUpdate property; Name property of Fanfic class renamed to title; Changed Fanfic and Comment CRUD controllers;

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,5 +21,11 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
+    App\EventListener\LastDateUpdater:
+        tags:
+            -
+                name: 'doctrine.event_listener'
+                event: 'prePersist'
+                lazy: true
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
