--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=12f914063ec6424445dac86fe55df7d7
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://hogshead_user:$argon2id$v=19$m=65536,t=4,p=1$oiwFXesa7MxE7XoDTEX9Tw$hub2JyVKhi06e1ifotFyQ/Ate7+N6fvBRMvQi+xMqw0@127.0.0.1:3306/hogshead_db"
+# DATABASE_URL="mysql://user:pass@127.0.0.1:3306/hogshead_db"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
